[tool.poetry]
name = "roadmap-sh project task todo challenge"
version = "0.1.0"
description = "Roadmap.sh Project Task Todo Challenge"
authors = ["Ittichai Boonyarakthunya <i.boonyarakthunya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
